2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/network_components.postgreSQL.sql,
	extras/local_components.postgreSQL.sql,
	extras/network_components.mysql.sql,
	extras/network_components.oracle.sql,
	extras/local_components.mysql.sql,
	extras/local_components.oracle.sql: Renamed files.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/local_components.postgreSQL.sql,
	extras/local_components.mysql.sql,
	extras/local_components.oracle.sql: Create new sql script to 
	add new network components and groups by yourself if something
	fails.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Added network
	components and groups to migration script.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: Added network
	components and groups to migration script.

2013-01-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/dialog.css: fixed the typo for disabled the styles.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php
	godmode/extensions.php
	godmode/agentes/configurar_agente.php
	godmode/servers/manage_recontask.php: Merged fixes from branches.

2013-01-11  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/setup_netflow.php: Fixed a string.

	* include/functions_config.php,
	  operation/menu.php,
	  godmode/menu.php: Added support for the log viewer.

2013-01-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_component_groups.php
	godmode/modules/manage_network_components.php
	godmode/modules/manage_nc_groups.php: Added tree format for
	component groups and make more restrictive filters in local/network
	components.
	
	Merged from branches.

2013-01-11  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	include/functions_ui.php
	include/functions.php